[package]
name = "bulog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bulog_derive = { version = "0.1.0", path = "bulog_derive" }
cfg-if = "1.0.0"
compact_str = { version = "0.8.1", features = ["serde", "smallvec"] }
dotenv = "0.15.0"
fastrand = "2.3.0"
hashbrown = { version = "0.15.2", features = ["serde", "rayon"] }
salvo = { version = "0.75.0", features = ["rustls", "anyhow", "websocket"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
smol_str = { version = "0.3.2", features = ["serde"] }
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["release_max_level_info", "max_level_debug"] }
tracing-subscriber = "0.3.19"

[features]
default = []
rocksdb_backend = ["surrealdb/kv-rocksdb"]
surrealkv_backend = ["surrealdb/kv-surrealkv"]
